Started work on reverseProxy feature Added JetBrains annotations to maven

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/BitStream.jar</systemPath>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>24.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
