Removed artifacts folder Removed LoadTester.java Updated .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 /mimes.txt
 /src/test/java/github/log4jexploit/crunchytoast/Start.java
 /src/test/java/github/log4jexploit/crunchytoast/LoadTester.java
+/artifacts/
